--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
 <app-navbar></app-navbar>
-<app-lancamentos-pesquisa></app-lancamentos-pesquisa>
+<app-lancamentos-cadastro></app-lancamentos-cadastro>
+
+<!--
+    <app-lancamentos-cadastro></app-lancamentos-cadastro>
+    <app-pessoas-cadastro></app-pessoas-cadastro>
+    <app-pessoas-pesquisa></app-pessoas-pesquisa>
+-->
