--- a/src/app/lancamentos-cadastro/lancamentos-cadastro.component.html
+++ b/src/app/lancamentos-cadastro/lancamentos-cadastro.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form autocomplete="off">
+    <form autocomplete="off" #cadLancamentoForm="ngForm">
 
         <div class="p-grid">
             <div class="p-col-12">
@@ -13,7 +13,10 @@
             <div class="p-col-6 p-md-3 p-fluid">
                 <label>Vencimento</label>
                 <p-calendar dateFormat="dd/mm/yy" [inline]="false"
-                    [readonlyInput]="false" [showIcon]="false"></p-calendar>
+                    [readonlyInput]="false" [showIcon]="false"
+                    name="vencimento" ngModel #vencimento="ngModel" required></p-calendar>
+                <app-message [control]="vencimento" error="required"
+                    text="Informe uma data de vencimento"></app-message>
             </div>
 
             <div class="p-col-6 p-md-3 p-fluid">
@@ -25,33 +28,34 @@
                 <!--{{ descricao.errors | json }}-->
                 <label>Descrição</label>
                 <input pInputText type="text" name="descricao"
-                    ngModel #descricao="ngModel" required minlength="7">
+                    ngModel #descricao="ngModel" required minlength="5">
 
                     <app-message [control]="descricao" error="required"
                         text="Informe uma descrição"></app-message>
 
-                    <div *ngIf="descricao.hasError('minlength') && descricao.dirty" class="p-message p-message-error">
-                        Mínimo de {{ descricao.errors?.minlength.requiredLength }} caracteres.
-                    </div>
+                    <app-message [control]="descricao" error="minlength"
+                        text="Mínimo de {{ descricao.errors?.minlength?.requiredLength }} caracteres."></app-message>
             </div>
 
             <div class="p-col-12 p-md-3 p-fluid">
                 <label>Valor</label>
                 <input pInputText type="text" placeholder="0,00" name="valor" currencyMask
                     [options]="{ prefix: '', thousands: '.', decimal: ',', nullable: true, allowNegative: false }"
-                    ngModel>
+                    ngModel #valor="ngModel" required>
+                <app-message [control]="valor" error="required"
+                    text="Informe um valor"></app-message>
             </div>
 
             <div class="p-col-12 p-md-6 p-fluid">
                 <label>Categoria {{ categoria.value }}</label>
-                <p-dropdown [options]="categorias" [showClear]="true" placeholder="Selecione"
-                    #categoria></p-dropdown>
+                <p-dropdown name="categoria" [options]="categorias" [showClear]="true" placeholder="Selecione"
+                    #categoria ngModel required></p-dropdown>
             </div>
 
             <div class="p-col-12 p-md-6 p-fluid">
                 <label>Pessoa {{ pessoa.value }}</label>
-                <p-dropdown [options]="pessoas" placeholder="Selecione"
-                    [filter]="true" #pessoa></p-dropdown>
+                <p-dropdown name="pessoa" [options]="pessoas" placeholder="Selecione"
+                    [filter]="true" #pessoa ngModel required></p-dropdown>
             </div>
 
             <div class="p-col-12 p-fluid">
@@ -60,7 +64,7 @@
             </div>
 
             <div class="p-col-12">
-                <button pButton type="submit" label="Salvar"></button>
+                <button pButton type="submit" label="Salvar" [disabled]="!cadLancamentoForm.valid"></button>
                 <button pButton type="button" label="Novo" class="p-button-secondary"></button>
                 <a href="javascript:;" style="line-height: 2.2em; margin-left: 5px">Voltar para a pesquisa</a>
             </div>
