--- a/src/app/pessoas-cadastro/pessoas-cadastro.component.html
+++ b/src/app/pessoas-cadastro/pessoas-cadastro.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form autocomplete="off">
+    <form autocomplete="off" #cadPessoaForm="ngForm">
 
         <div class="p-grid">
             <div class="p-col-12">
@@ -8,46 +8,70 @@
 
             <div class="p-col-12 p-fluid">
                 <label>Nome</label>
-                <input pInputText type="text">
+                <input pInputText type="text" name="nome" ngModel #nome="ngModel"
+                    required minlength="5">
+
+                <app-message [control]="nome" error="required"
+                    text="Informe um nome"></app-message>
+                <app-message [control]="nome" error="minlength"
+                    text="O nome deve ter no mínimo {{ nome.errors?.minlength?.requiredLength }}  caracteres"></app-message>
             </div>
 
             <div class="p-col-12 p-md-9 p-fluid">
                 <label>Logradouro</label>
-                <input pInputText type="text">
+                <input pInputText type="text" name="logradouro" ngModel #logradouro="ngModel"
+                    required>
+                <app-message [control]="logradouro" error="required"
+                    text="Informe um logradouro"></app-message>
             </div>
 
             <div class="p-col-12 p-md-3 p-fluid">
                 <label>Número</label>
-                <input pInputText type="text">
+                <input pInputText type="text" name="numero" ngModel #numero="ngModel"
+                    required>
+                <app-message [control]="numero" error="required"
+                    text="Informe um número"></app-message>
             </div>
 
             <div class="p-col-12 p-md-5 p-fluid">
                 <label>Complemento</label>
-                <input pInputText type="text">
+                <input pInputText type="text" name="complemento" ngModel>
             </div>
 
             <div class="p-col-12 p-md-5 p-fluid">
                 <label>Bairro</label>
-                <input pInputText type="text">
+                <input pInputText type="text" name="bairro" ngModel #bairro="ngModel"
+                    required>
+                <app-message [control]="bairro" error="required"
+                    text="Informe um bairro"></app-message>
             </div>
 
             <div class="p-col-12 p-md-2 p-fluid">
                 <label>CEP</label>
-                <p-inputMask mask="99.999-999"></p-inputMask>
+                <p-inputMask mask="99.999-999" name="cep" ngModel #cep="ngModel"
+                    required></p-inputMask>
+                <app-message [control]="cep" error="required"
+                    text="Informe um CEP"></app-message>
             </div>
 
             <div class="p-col-12 p-md-6 p-fluid">
                 <label>Cidade</label>
-                <input pInputText type="text">
+                <input pInputText type="text" name="cidade" ngModel #cidade="ngModel"
+                    required>
+                <app-message [control]="cidade" error="required"
+                    text="Informe uma cidade"></app-message>
             </div>
 
             <div class="p-col-12 p-md-6 p-fluid">
                 <label>Estado</label>
-                <input pInputText type="text">
+                <input pInputText type="text" name="estado" ngModel #estado="ngModel"
+                    required>
+                <app-message [control]="estado" error="required"
+                    text="Informe um estado"></app-message>
             </div>
 
             <div class="p-col-12">
-                <button pButton type="submit" label="Salvar"></button>
+                <button pButton type="submit" label="Salvar" [disabled]="!cadPessoaForm.valid"></button>
                 <button pButton type="button" label="Novo" class="p-button-secondary"></button>
                 <a href="javascript:;" style="line-height: 2.2em; margin-left: 5px">Voltar para a pesquisa</a>
             </div>
