--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <app-navbar></app-navbar>
-<app-lancamentos-cadastro></app-lancamentos-cadastro>
+<app-pessoas-pesquisa></app-pessoas-pesquisa>
 
 <!--
     <app-lancamentos-cadastro></app-lancamentos-cadastro>
+    <app-lancamentos-pesquisa></app-lancamentos-pesquisa>
     <app-pessoas-cadastro></app-pessoas-cadastro>
     <app-pessoas-pesquisa></app-pessoas-pesquisa>
 -->
