--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -1,30 +1,76 @@
 <div class="container">
     <div class="p-grid">
-        <div class="p-col-12">
-            <h1>Lançamentos</h1>
-        </div>
+        <form autocomplete="off" (ngSubmit)="pesquisar()" style="width: 100%">
+            <div class="p-col-12">
+                <h1>Lançamentos</h1>
+            </div>
 
-        <div class="p-col-12 p-fluid">
-            <label>Descrição</label>
-            <input type="text" pInputText>
-        </div>
+            <div class="p-col-12 p-fluid">
+                <label>Descrição</label>
+                <input pInputText type="text" name="descricao" [(ngModel)]="descricao">
+            </div>
 
-        <div class="p-col-12">
-            <label style="display: block;">Vencimento</label>
-            <input type="text" pInputText style="width: 110px;">
+            <div class="p-col-12">
+                <label style="display: block;">Vencimento</label>
+                <input type="text" pInputText style="width: 110px;">
 
-            <label>até</label>
-            <input type="text" pInputText style="width: 110px;">
-        </div>
+                <label style="margin: 0 5px;">até</label>
+                <input type="text" pInputText style="width: 110px;">
+            </div>
 
-        <div class="p-col-12">
-            <button pButton type="submit" label="Pesquisar"></button>
-        </div>
+            <div class="p-col-12">
+                <button pButton type="submit" label="Pesquisar"></button>
+            </div>
+        </form>
     </div>
 
     <div class="p-grid">
         <div class="p-col-12">
-            <app-lancamentos-grid [lancamentos]="lancamentos"></app-lancamentos-grid>
+            <p-table [value]="lancamentos" [paginator]="true" [rows]="5" [responsive]="true">
+                <ng-template pTemplate="header">
+                    <tr>
+                        <th>Pessoa</th>
+                        <th>Descrição</th>
+                        <th class="col-data-header">Vencimento</th>
+                        <th class="col-data-header">Pagamento</th>
+                        <th class="col-valor-header">Valor</th>
+                        <th class="col-acoes-header">Ações</th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-lancamento>
+                    <tr>
+                        <td>
+                            <span class="p-column-title">Pessoa</span>
+                            {{lancamento.pessoa}}
+                        </td>
+                        <td>
+                            <span class="p-column-title">Descrição</span>
+                            {{lancamento.descricao}}
+                        </td>
+                        <td class="col-data-content">
+                            <span class="p-column-title">Vencimento</span>
+                            {{lancamento.dataVencimento | date:'dd/MM/yyyy'}}
+                        </td>
+                        <td class="col-data-content">
+                            <span class="p-column-title">Pagamento</span>
+                            {{lancamento.dataPagamento | date:'dd/MM/yyyy'}}
+                        </td>
+                        <td class="col-valor-content" [ngStyle]="{ color: lancamento.tipo === 'DESPESA' ? 'red' : 'blue' }">
+                            <span class="p-column-title">Valor</span>
+                            {{lancamento.valor | number:'1.2-2'}}
+                            <!--
+                            <span [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'">
+                                {{lancamento.valor}}
+                            </span>
+                            -->
+                        </td>
+                        <td class="col-acoes-content">
+                            <a pButton class="p-button-rounded" icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"></a>
+                            <button pButton class="p-button-rounded" icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"></button>
+                        </td>
+                    </tr>
+                </ng-template>
+            </p-table>
         </div>
 
         <div class="p-col-12">
