--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -7,15 +7,19 @@
 
             <div class="p-col-12 p-fluid">
                 <label>Descrição</label>
-                <input pInputText type="text" name="descricao" [(ngModel)]="descricao">
+                <input pInputText type="text" name="descricao" [(ngModel)]="filtro.descricao">
             </div>
 
             <div class="p-col-12">
                 <label style="display: block;">Vencimento</label>
-                <input type="text" pInputText style="width: 110px;">
+                <p-calendar dateFormat="dd/mm/yy" [inputStyle]="{ width: '120px' }"
+                    name="vencimentoInicio" [(ngModel)]="filtro.dataVencimentoInicio">
+                </p-calendar>
 
                 <label style="margin: 0 5px;">até</label>
-                <input type="text" pInputText style="width: 110px;">
+                <p-calendar dateFormat="dd/mm/yy" [inputStyle]="{ width: '120px' }"
+                    name="vencimentoFim" [(ngModel)]="filtro.dataVencimentoFim">
+                </p-calendar>
             </div>
 
             <div class="p-col-12">
@@ -26,7 +30,18 @@
 
     <div class="p-grid">
         <div class="p-col-12">
-            <p-table [value]="lancamentos" [paginator]="true" [rows]="5" [responsive]="true">
+            <p-table [value]="lancamentos" [paginator]="true"
+                [rows]="filtro.itensPorPagina" [lazy]="true"
+                [responsive]="true" [totalRecords]="totalRegistros"
+                (onLazyLoad)="aoMudarPagina($event)">
+                <ng-template pTemplate="emptymessage">
+                    <tr>
+                        <td colspan="6">
+                            Nenhum lançamento encontrado
+                        </td>
+                    </tr>
+                </ng-template>
+
                 <ng-template pTemplate="header">
                     <tr>
                         <th>Pessoa</th>
