--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<app-pessoas-pesquisa></app-pessoas-pesquisa>
+<app-lancamentos-pesquisa></app-lancamentos-pesquisa>
 
 <!--
     <app-lancamentos-cadastro></app-lancamentos-cadastro>
@@ -7,3 +7,13 @@
     <app-pessoas-cadastro></app-pessoas-cadastro>
     <app-pessoas-pesquisa></app-pessoas-pesquisa>
 -->
+
+<p-toast></p-toast>
+<p-confirmDialog header="Confirmação" icon="pi pi-question-circle" #confirmacao>
+    <p-footer>
+      <button type="button" pButton icon="pi pi-check" label="Sim"
+        (click)="confirmacao.accept()"></button>
+      <button type="button" pButton icon="pi pi-times" label="Não"
+        (click)="confirmacao.reject()"></button>
+    </p-footer>
+</p-confirmDialog>
