--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -33,7 +33,8 @@
             <p-table [value]="lancamentos" [paginator]="true"
                 [rows]="filtro.itensPorPagina" [lazy]="true"
                 [responsive]="true" [totalRecords]="totalRegistros"
-                (onLazyLoad)="aoMudarPagina($event)">
+                (onLazyLoad)="aoMudarPagina($event)"
+                #tblLancamentos>
                 <ng-template pTemplate="emptymessage">
                     <tr>
                         <td colspan="6">
@@ -80,8 +81,12 @@
                             -->
                         </td>
                         <td class="col-acoes-content">
-                            <a pButton class="p-button-rounded" icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"></a>
-                            <button pButton class="p-button-rounded" icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"></button>
+                            <span class="p-column-title"></span>
+                            <a pButton class="p-button-rounded" icon="pi pi-pencil"
+                                pTooltip="Editar" tooltipPosition="top"></a>
+                            <button pButton class="p-button-rounded" icon="pi pi-trash"
+                                pTooltip="Excluir" tooltipPosition="top"
+                                (click)="confirmarExclusao(lancamento)"></button>
                         </td>
                     </tr>
                 </ng-template>
