--- a/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -20,7 +20,8 @@
         <div class="p-col-12">
             <p-table [value]="pessoas" [paginator]="true"
             [responsive]="true" [rows]="filtro.itensPorPagina" [lazy]="true"
-            [totalRecords]="totalRegistros" (onLazyLoad)="aoMudarPagina($event)">
+            [totalRecords]="totalRegistros" (onLazyLoad)="aoMudarPagina($event)"
+            #tblPessoas>
                 <ng-template pTemplate="header">
                     <tr>
                         <th>Nome</th>
@@ -53,8 +54,12 @@
                             </a>
                         </td>
                         <td class="col-acoes-content">
-                            <a pButton class="p-button-rounded" icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"></a>
-                            <button pButton class="p-button-rounded" icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"></button>
+                            <span class="p-column-title"></span>
+                            <a pButton class="p-button-rounded" icon="pi pi-pencil"
+                                pTooltip="Editar" tooltipPosition="top"></a>
+                            <button pButton class="p-button-rounded" icon="pi pi-trash"
+                                pTooltip="Excluir" tooltipPosition="top"
+                                (click)="confirmarExclusao(pessoa)"></button>
                         </td>
                     </tr>
                 </ng-template>
