--- a/src/app/lancamentos/lancamentos-cadastro/lancamentos-cadastro.component.html
+++ b/src/app/lancamentos/lancamentos-cadastro/lancamentos-cadastro.component.html
@@ -53,13 +53,13 @@
                 <label>Categoria</label>
                 <p-dropdown name="categoria" [options]="categorias"
                     [showClear]="true" placeholder="Selecione"
-                    [(ngModel)]="lancamento.categoria" required></p-dropdown>
+                    [(ngModel)]="lancamento.categoria.codigo" required></p-dropdown>
             </div>
 
             <div class="p-col-12 p-md-6 p-fluid">
                 <label>Pessoa</label> <!-- {{ pessoa.value }} -->
                 <p-dropdown name="pessoa" [options]="pessoas" placeholder="Selecione"
-                    [filter]="true" [(ngModel)]="lancamento.pessoa" required></p-dropdown>
+                    [filter]="true" [(ngModel)]="lancamento.pessoa.codigo" required></p-dropdown>
             </div>
 
             <div class="p-col-12 p-fluid">
