--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<app-lancamentos-cadastro></app-lancamentos-cadastro>
+<app-pessoas-cadastro></app-pessoas-cadastro>
 
 <!--
     <app-lancamentos-cadastro></app-lancamentos-cadastro>
