Incluindo rotas e navegacao no sistema

--- a/src/app/lancamentos/lancamentos-cadastro/lancamentos-cadastro.component.html
+++ b/src/app/lancamentos/lancamentos-cadastro/lancamentos-cadastro.component.html
@@ -71,7 +71,7 @@
             <div class="p-col-12">
                 <button pButton type="submit" label="Salvar" [disabled]="!cadLancamentoForm.valid"></button>
                 <button pButton type="button" label="Novo" class="p-button-secondary"></button>
-                <a href="javascript:;" style="line-height: 2.2em; margin-left: 5px">Voltar para a pesquisa</a>
+                <a routerLink="/lancamentos" style="line-height: 2.2em; margin-left: 5px">Voltar para a pesquisa</a>
             </div>
 
         </div>
