--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,5 @@
 <app-navbar></app-navbar>
-<app-pessoas-cadastro></app-pessoas-cadastro>
-
-<!--
-    <app-lancamentos-cadastro></app-lancamentos-cadastro>
-    <app-lancamentos-pesquisa></app-lancamentos-pesquisa>
-    <app-pessoas-cadastro></app-pessoas-cadastro>
-    <app-pessoas-pesquisa></app-pessoas-pesquisa>
--->
+<router-outlet></router-outlet>
 
 <p-toast></p-toast>
 <p-confirmDialog header="Confirmação" icon="pi pi-question-circle" #confirmacao>
