--- a/src/app/pessoas/pessoas-cadastro/pessoas-cadastro.component.html
+++ b/src/app/pessoas/pessoas-cadastro/pessoas-cadastro.component.html
@@ -3,7 +3,7 @@
 
         <div class="p-grid">
             <div class="p-col-12">
-                <h1>Nova Pessoa</h1>
+                <h1>{{ editando ? 'Edição de' : 'Nova' }} Pessoa</h1>
             </div>
 
             <div class="p-col-12 p-fluid">
@@ -76,9 +76,11 @@
 
             <div class="p-col-12">
                 <button pButton type="submit" label="Salvar" [disabled]="!cadPessoaForm.valid"></button>
-                <button pButton type="button" label="Novo" class="p-button-secondary"></button>
-                <a href="javascript:;" style="line-height: 2.2em; margin-left: 5px">Voltar para a pesquisa</a>
+                <button pButton type="button" label="Novo" class="p-button-secondary"
+                    (click)="novo(cadPessoaForm)"></button>
+                <a routerLink="/pessoas" style="line-height: 2.2em; margin-left: 5px">Voltar para a pesquisa</a>
             </div>
+
         </div>
 
     </form>
