--- a/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -57,7 +57,8 @@
                         <td class="col-acoes-content">
                             <span class="p-column-title"></span>
                             <a pButton class="p-button-rounded" icon="pi pi-pencil"
-                                pTooltip="Editar" tooltipPosition="top"></a>
+                                pTooltip="Editar" tooltipPosition="top"
+                                [routerLink]="['/pessoas', pessoa.codigo]"></a>
                             <button pButton class="p-button-rounded" icon="pi pi-trash"
                                 pTooltip="Excluir" tooltipPosition="top"
                                 (click)="confirmarExclusao(pessoa)"></button>
@@ -76,7 +77,7 @@
         </div>
 
         <div class="p-col-12">
-            <a pButton label="Nova Pessoa"></a>
+            <a pButton label="Nova Pessoa" routerLink="/pessoas/nova"></a>
         </div>
     </div>
 </div>
