--- a/src/app/seguranca/login-form/login-form.component.html
+++ b/src/app/seguranca/login-form/login-form.component.html
@@ -20,7 +20,7 @@
 
             <div class="p-col-12">
                 <button pButton type="submit" label="Login" [disabled]="!loginForm.valid"
-                    (click)="login(usuario.value, senha.value)"></button>
+                    (click)="login(usuario.value, senha.value); senha.value = '';"></button>
             </div>
         </div>
     </form>
