--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -87,7 +87,8 @@
                                 [routerLink]="['/lancamentos', lancamento.codigo]"></a>
                             <button pButton class="p-button-rounded" icon="pi pi-trash"
                                 pTooltip="Excluir" tooltipPosition="top"
-                                (click)="confirmarExclusao(lancamento)"></button>
+                                (click)="confirmarExclusao(lancamento)"
+                                [disabled]="!temPermissao('ROLE_REMOVER_LANCAMENTO')"></button>
                         </td>
                     </tr>
                 </ng-template>
