--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -13,6 +13,6 @@
             *ngIf="temPermissao('ROLE_PESQUISAR_LANCAMENTO')"><a routerLink="/lancamentos">Lançamentos</a></li>
         <li class="navbar-menuitem" routerLinkActive="ativo"
             *ngIf="temPermissao('ROLE_PESQUISAR_PESSOA')"><a routerLink="/pessoas">Pessoas</a></li>
-        <li class="navbar-menuitem"><a href="#">Logout</a></li>
+        <li class="navbar-menuitem"><a href="javascript:;" (click)="logout()">Logout</a></li>
     </ul>
 </nav>
