Criando um link para fechar o menu

--- a/src/app/core/navbar/navbar.component.css
+++ b/src/app/core/navbar/navbar.component.css
@@ -7,6 +7,11 @@
     color: #fff;
 }
 
+.navbar-close {
+    color: #fff;
+    float: right;
+}
+
 .navbar-menu {
     position: fixed;
     top: 0;
