--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <ul class="navbar-menu" [hidden]="!exibindoMenu">
-        <li class="navbar-usuario">{{ nomeUsuario }}</li>
+        <li class="navbar-usuario">{{ nomeUsuario }} <a href="javascript:;" class="navbar-close" (click)="exibindoMenu = false"><i class="pi pi-times"></i></a></li>
         <li class="navbar-menuitem" routerLinkActive="ativo"
             *ngIf="temPermissao('ROLE_PESQUISAR_LANCAMENTO')"><a routerLink="/lancamentos">Lançamentos</a></li>
         <li class="navbar-menuitem" routerLinkActive="ativo"
