Adicionando formulario reativo para o cadastro de lancamentos

--- a/src/app/lancamentos/lancamentos-cadastro/lancamentos-cadastro.component.html
+++ b/src/app/lancamentos/lancamentos-cadastro/lancamentos-cadastro.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form autocomplete="off" #cadLancamentoForm="ngForm" (ngSubmit)="salvar(cadLancamentoForm)">
+    <form autocomplete="off" (ngSubmit)="salvar()" [formGroup]="formulario">
 
         <div class="p-grid">
             <div class="p-col-12">
@@ -8,70 +8,70 @@
 
             <div class="p-col-12">
                 <p-selectButton name="tipo" [options]="tipos"
-                    [(ngModel)]="lancamento.tipo" #tipo></p-selectButton>
+                    formControlName="tipo"></p-selectButton>
             </div>
 
             <div class="p-col-6 p-md-3 p-fluid">
                 <label>Vencimento</label>
                 <p-calendar dateFormat="dd/mm/yy" [inline]="false"
                     [readonlyInput]="false" [showIcon]="false"
-                    name="vencimento" [(ngModel)]="lancamento.dataVencimento"
-                    #vencimento="ngModel" required></p-calendar>
-                <app-message [control]="vencimento" error="required"
+                    name="vencimento"
+                    formControlName="dataVencimento"></p-calendar>
+                <app-message [control]="formulario.get('dataVencimento')" error="required"
                     text="Informe uma data de vencimento"></app-message>
             </div>
 
             <div class="p-col-6 p-md-3 p-fluid">
-                <label>{{ tipo.value === 'RECEITA' ? 'Recebimento' : 'Pagamento' }}</label>
+                <label>{{ formulario.get('tipo').value === 'RECEITA' ? 'Recebimento' : 'Pagamento' }}</label>
                 <p-calendar dateFormat="dd/mm/yy" name="pagamento"
-                [(ngModel)]="lancamento.dataPagamento"></p-calendar>
+                    formControlName="dataPagamento"></p-calendar>
             </div>
 
             <div class="p-col-12 p-md-9 p-fluid">
                 <!--{{ descricao.errors | json }}-->
                 <label>Descrição</label>
                 <input pInputText type="text" name="descricao"
-                    [(ngModel)]="lancamento.descricao" #descricao="ngModel" required minlength="5">
+                    formControlName="descricao">
 
-                    <app-message [control]="descricao" error="required"
+                    <app-message [control]="formulario.get('descricao')" error="required"
                         text="Informe uma descrição"></app-message>
 
-                    <app-message [control]="descricao" error="minlength"
-                        text="Mínimo de {{ descricao.errors?.minlength?.requiredLength }} caracteres."></app-message>
+                    <app-message [control]="formulario.get('descricao')" error="minlength"
+                        text="Mínimo de {{ formulario.get('descricao').errors?.minlength?.requiredLength }} caracteres."></app-message>
             </div>
 
             <div class="p-col-12 p-md-3 p-fluid">
                 <label>Valor</label>
                 <input pInputText type="text" placeholder="0,00" name="valor" currencyMask
                     [options]="{ prefix: '', thousands: '.', decimal: ',', nullable: true, allowNegative: false }"
-                    [(ngModel)]="lancamento.valor" #valor="ngModel" required>
-                <app-message [control]="valor" error="required"
+                    formControlName="valor">
+                <app-message [control]="formulario.get('valor')" error="required"
                     text="Informe um valor"></app-message>
             </div>
 
-            <div class="p-col-12 p-md-6 p-fluid">
+            <div class="p-col-12 p-md-6 p-fluid" formGroupName="categoria">
                 <label>Categoria</label>
                 <p-dropdown name="categoria" [options]="categorias"
                     [showClear]="true" placeholder="Selecione"
-                    [(ngModel)]="lancamento.categoria.codigo" required></p-dropdown>
+                    formControlName="codigo"></p-dropdown>
             </div>
 
-            <div class="p-col-12 p-md-6 p-fluid">
+            <div class="p-col-12 p-md-6 p-fluid" formGroupName="pessoa">
                 <label>Pessoa</label> <!-- {{ pessoa.value }} -->
                 <p-dropdown name="pessoa" [options]="pessoas" placeholder="Selecione"
-                    [filter]="true" [(ngModel)]="lancamento.pessoa.codigo" required></p-dropdown>
+                    [filter]="true" formControlName="codigo"></p-dropdown>
             </div>
 
             <div class="p-col-12 p-fluid">
                 <label>Observação</label>
                 <textarea pInputTextarea name="observacao"
-                    [(ngModel)]="lancamento.observacao" rows="3"></textarea>
+                    rows="3" formControlName="observacao"></textarea>
             </div>
 
             <div class="p-col-12">
-                <button pButton type="submit" label="Salvar" [disabled]="!cadLancamentoForm.valid"></button>
+                <button pButton type="submit" label="Salvar" [disabled]="!formulario.valid"></button>
                 <button pButton type="button" label="Novo" class="p-button-secondary"
-                    (click)="novo(cadLancamentoForm)"></button>
+                    (click)="novo()"></button>
                 <a routerLink="/lancamentos" style="line-height: 2.2em; margin-left: 5px">Voltar para a pesquisa</a>
             </div>
 
