--- a/src/app/lancamentos/lancamentos-cadastro/lancamentos-cadastro.component.html
+++ b/src/app/lancamentos/lancamentos-cadastro/lancamentos-cadastro.component.html
@@ -33,11 +33,11 @@
                 <input pInputText type="text" name="descricao"
                     formControlName="descricao">
 
-                    <app-message [control]="formulario.get('descricao')" error="required"
+                    <app-message [control]="formulario.get('descricao')" error="obrigatorio"
                         text="Informe uma descrição"></app-message>
 
-                    <app-message [control]="formulario.get('descricao')" error="minlength"
-                        text="Mínimo de {{ formulario.get('descricao').errors?.minlength?.requiredLength }} caracteres."></app-message>
+                    <app-message [control]="formulario.get('descricao')" error="tamanhoMinimo"
+                        text="Mínimo de {{ formulario.get('descricao').errors?.tamanhoMinimo?.tamanho }} caracteres."></app-message>
             </div>
 
             <div class="p-col-12 p-md-3 p-fluid">
