Configuracao do grafico de linhas

--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -6,7 +6,8 @@
 
         <div class="p-col-12  p-md-6">
             <p-panel header="Lançamentos por categoria">
-                <p-chart type="pie" [data]="pieChartData"></p-chart>
+                <p-chart type="pie" title="Despesas" [data]="pieChartDataDespesas"></p-chart>
+                <p-chart type="pie" title="Receitas" [data]="pieChartDataReceitas"></p-chart>
             </p-panel>
         </div>
 
