--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -6,14 +6,17 @@
 
         <div class="p-col-12  p-md-6">
             <p-panel header="Lançamentos por categoria">
-                <p-chart type="pie" title="Despesas" [data]="pieChartDataDespesas"></p-chart>
-                <p-chart type="pie" title="Receitas" [data]="pieChartDataReceitas"></p-chart>
+                <p-chart type="pie" title="Despesas" [data]="pieChartDataDespesas"
+                    [options]="pieChartOptions"></p-chart>
+                <p-chart type="pie" title="Receitas" [data]="pieChartDataReceitas"
+                    [options]="pieChartOptions"></p-chart>
             </p-panel>
         </div>
 
         <div class="p-col-12  p-md-6">
             <p-panel header="Lançamentos por dia">
-                <p-chart type="line" [data]="lineChartData"></p-chart>
+                <p-chart type="line" [data]="lineChartData"
+                    [options]="lineChartOptions"></p-chart>
             </p-panel>
         </div>
     </div>
