Criacao do modulo e comp de relatorio para gerar a partir da API

--- a/src/app/relatorios/relatorio-lancamentos/relatorio-lancamentos.component.html
+++ b/src/app/relatorios/relatorio-lancamentos/relatorio-lancamentos.component.html
@@ -9,14 +9,14 @@
                 <label>Vencimento</label>
                 <p-calendar dateFormat="dd/mm/yy" required
                     [inputStyle]="{ 'width': '110px', 'margin': '0 7px'}"
-                    [(ngModel)]="periodoInicio" name="periodoInicio">
+                    [(ngModel)]="dataInicial" name="dataInicial">
                     </p-calendar>
 
                 <label>até</label>
 
                 <p-calendar dateFormat="dd/mm/yy" required
                     [inputStyle]="{ 'width': '110px', 'margin': '0 7px'}"
-                    [(ngModel)]="periodoFim" name="periodoFim">
+                    [(ngModel)]="dataFinal" name="dataFinal">
                     </p-calendar>
             </div>
 
