--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -9,10 +9,16 @@
 
     <ul class="navbar-menu" [hidden]="!exibindoMenu">
         <li class="navbar-usuario">{{ nomeUsuario }} <a href="javascript:;" class="navbar-close" (click)="exibindoMenu = false"><i class="pi pi-times"></i></a></li>
+
+        <li class="navbar-menuitem" routerLinkActive="ativo"
+            *ngIf="temPermissao('ROLE_PESQUISAR_LANCAMENTO')"><a routerLink="/dashboard">Dashboard</a></li>
         <li class="navbar-menuitem" routerLinkActive="ativo"
             *ngIf="temPermissao('ROLE_PESQUISAR_LANCAMENTO')"><a routerLink="/lancamentos">Lançamentos</a></li>
         <li class="navbar-menuitem" routerLinkActive="ativo"
             *ngIf="temPermissao('ROLE_PESQUISAR_PESSOA')"><a routerLink="/pessoas">Pessoas</a></li>
+        <li class="navbar-menuitem" routerLinkActive="ativo"
+            *ngIf="temPermissao('ROLE_PESQUISAR_LANCAMENTO')"><a routerLink="/relatorios/lancamentos">Relatórios</a></li>
+
         <li class="navbar-menuitem"><a href="javascript:;" (click)="logout()">Logout</a></li>
     </ul>
 </nav>
