--- a/src/app/pessoas/pessoas-cadastro/pessoas-cadastro.component.html
+++ b/src/app/pessoas/pessoas-cadastro/pessoas-cadastro.component.html
@@ -75,6 +75,47 @@
             </div>
 
             <div class="p-col-12">
+                <button pButton label="Novo Contato" icon="pi pi-plus" type="button"
+                    class="p-button-secondary p-button-sm" (click)="prepararNovoContato()"></button>
+            </div>
+            <div class="p-col-12">
+                <p-table [value]="pessoa.contatos" [responsive]="true">
+                    <ng-template pTemplate="caption">
+                        Contatos
+                    </ng-template>
+
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th>Nome</th>
+                            <th>E-mail</th>
+                            <th>Telefone</th>
+                            <th class="col-acoes-header"></th>
+                        </tr>
+                    </ng-template>
+
+                    <ng-template pTemplate="body" let-contato>
+                        <tr>
+                            <td>{{ contato.nome }}</td>
+                            <td>{{ contato.email }}</td>
+                            <td>{{ contato.telefone }}</td>
+                            <td class="col-acoes-content">
+                                <button pButton class="p-button-rounded" icon="pi pi-pencil" type="button"
+                                    pTooltip="Editar" tooltipPosition="top"></button>
+                                <button pButton class="p-button-rounded" icon="pi pi-trash" type="button"
+                                    pTooltip="Excluir" tooltipPosition="top"></button>
+                            </td>
+                        </tr>
+                    </ng-template>
+
+                    <ng-template pTemplate="emptymessage">
+                        <tr>
+                            <td colspan="4">Nenhum contato cadastrado.</td>
+                        </tr>
+                    </ng-template>
+                </p-table>
+            </div>
+
+            <div class="p-col-12">
                 <button pButton type="submit" label="Salvar" [disabled]="!cadPessoaForm.valid"></button>
                 <button pButton type="button" label="Novo" class="p-button-secondary"
                     (click)="nova(cadPessoaForm)"></button>
@@ -85,3 +126,33 @@
 
     </form>
 </div>
+
+<p-dialog header="Novo Contato" [(visible)]="exibindoDialogContato"
+    modal="modal" *ngIf="contato">
+    <form autocomplete="off" #formContato="ngForm">
+        <div class="p-col-12 p-fluid">
+            <label>Nome</label>
+            <input pInputText type="text" name="nomeContato"
+                required [(ngModel)]="contato.nome" #nomeContato="ngModel" />
+            <app-message [control]="nomeContato" error="required" text="Informe o nome"></app-message>
+        </div>
+
+        <div class="p-col-12 p-fluid">
+            <label>E-mail</label>
+            <input pInputText type="email" name="emailContato"
+                required email [(ngModel)]="contato.email" #emailContato="ngModel" />
+                <app-message [control]="emailContato" error="required" text="Informe o e-mail"></app-message>
+                <app-message [control]="emailContato" error="email" text="Informe um e-mail válido"></app-message>
+        </div>
+
+        <div class="p-col-12 p-fluid">
+            <label>Telefone</label>
+            <p-inputMask name="telefoneContato" [(ngModel)]="contato.telefone"
+                mask="(99) 99999-9999"></p-inputMask>
+        </div>
+
+        <div class="p-col-12">
+            <button pButton type="submit" label="Confirmar" [disabled]="formContato.invalid"></button>
+        </div>
+    </form>
+</p-dialog>
