--- a/src/app/lancamentos/lancamentos-cadastro/lancamentos-cadastro.component.html
+++ b/src/app/lancamentos/lancamentos-cadastro/lancamentos-cadastro.component.html
@@ -68,6 +68,12 @@
                     rows="3" formControlName="observacao"></textarea>
             </div>
 
+            <div class="p-col-6 p-offset-6 p-md-2 p-md-offset-10 p-fluid">
+                <p-fileUpload name="anexo" mode="basic" auto="true" maxFileSize="100000000"
+                    chooseLabel="Anexar" accept="image/*,application/*"
+                    [url]="urlUploadAnexo"></p-fileUpload>
+            </div>
+
             <div class="p-col-12">
                 <button pButton type="submit" label="Salvar" [disabled]="!formulario.valid"></button>
                 <button pButton type="button" label="Novo" class="p-button-secondary"
