Download do anexo e exibicao do nome

--- a/src/app/lancamentos/lancamentos-cadastro/lancamentos-cadastro.component.html
+++ b/src/app/lancamentos/lancamentos-cadastro/lancamentos-cadastro.component.html
@@ -68,10 +68,16 @@
                     rows="3" formControlName="observacao"></textarea>
             </div>
 
-            <div class="p-col-6 p-offset-6 p-md-2 p-md-offset-10 p-fluid">
+            <div class="p-col-6 p-offset-6 p-md-2 p-md-offset-10 p-fluid"
+                *ngIf="!formulario.get('anexo').value">
                 <p-fileUpload name="anexo" mode="basic" auto="true" maxFileSize="100000000"
                     chooseLabel="Anexar" accept="image/*,application/*"
-                    [url]="urlUploadAnexo"></p-fileUpload>
+                    [url]="urlUploadAnexo" (onUpload)="aoTerminarUploadAnexo($event)"></p-fileUpload>
+            </div>
+
+            <div class="p-col-12 p-fluid" *ngIf="formulario.get('anexo').value" dir="rtl">
+                <a target="_blank" pTooltip="Baixar anexo" tooltipPosition="top"
+                    [href]="formulario.get('urlAnexo').value">{{ nomeAnexo }}</a>
             </div>
 
             <div class="p-col-12">
