Exibicao de mensagem em caso de erro ao anexar

--- a/src/app/lancamentos/lancamentos-cadastro/lancamentos-cadastro.component.html
+++ b/src/app/lancamentos/lancamentos-cadastro/lancamentos-cadastro.component.html
@@ -72,7 +72,9 @@
                 *ngIf="!formulario.get('anexo').value">
                 <p-fileUpload name="anexo" mode="basic" auto="true" maxFileSize="100000000"
                     chooseLabel="Anexar" accept="image/*,application/*"
-                    [url]="urlUploadAnexo" (onUpload)="aoTerminarUploadAnexo($event)"></p-fileUpload>
+                    [url]="urlUploadAnexo"
+                    (onUpload)="aoTerminarUploadAnexo($event)"
+                    (onError)="erroUpload($event)"></p-fileUpload>
             </div>
 
             <div class="p-col-12 p-fluid" *ngIf="formulario.get('anexo').value" dir="rtl">
