Incluindo progress spinner ao anexar arquivo

--- a/src/app/lancamentos/lancamentos-cadastro/lancamentos-cadastro.component.html
+++ b/src/app/lancamentos/lancamentos-cadastro/lancamentos-cadastro.component.html
@@ -73,8 +73,12 @@
                 <p-fileUpload name="anexo" mode="basic" auto="true" maxFileSize="100000000"
                     chooseLabel="Anexar" accept="image/*,application/*"
                     [url]="urlUploadAnexo"
+                    (onBeforeUpload)="antesUploadAnexo($event)"
                     (onUpload)="aoTerminarUploadAnexo($event)"
-                    (onError)="erroUpload($event)"></p-fileUpload>
+                    (onError)="erroUpload($event)"
+                    [hidden]="uploadEmAndamento"></p-fileUpload>
+
+                    <p-progressSpinner [hidden]="!uploadEmAndamento" [style]="{ width: '40px', height: '40px' }"></p-progressSpinner>
             </div>
 
             <div class="p-col-12 p-fluid" *ngIf="formulario.get('anexo').value" dir="rtl">
