Criando o downdown de estados

--- a/src/app/pessoas/pessoas-cadastro/pessoas-cadastro.component.html
+++ b/src/app/pessoas/pessoas-cadastro/pessoas-cadastro.component.html
@@ -57,21 +57,18 @@
             </div>
 
             <div class="p-col-12 p-md-6 p-fluid">
+                <label>Estado</label>
+                <p-dropdown placeholder="Selecione..."
+                    [filter]="true" [options]="estados"></p-dropdown>
+            </div>
+
+            <div class="p-col-12 p-md-6 p-fluid">
                 <label>Cidade</label>
                 <input pInputText type="text" name="cidade"
                     [(ngModel)]="pessoa.endereco.cidade" #cidade="ngModel"
                     required>
                 <app-message [control]="cidade" error="required"
                     text="Informe uma cidade"></app-message>
-            </div>
-
-            <div class="p-col-12 p-md-6 p-fluid">
-                <label>Estado</label>
-                <input pInputText type="text" name="estado"
-                    [(ngModel)]="pessoa.endereco.estado" #estado="ngModel"
-                    required>
-                <app-message [control]="estado" error="required"
-                    text="Informe um estado"></app-message>
             </div>
 
             <div class="p-col-12">
